--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,9 @@
         description="compile the source " >
     <!-- Compile the java code from ${src} into ${build} -->
     <javac srcdir="${src}" destdir="${build}" classpathref="inc"
-          includeantruntime="false"/>
+        includeantruntime="false">
+      <compilerarg line="-Xlint -Xlint:-path"/>
+    </javac>
   </target>
 
   <target name="dist" depends="compile"
