--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'com.github.johnrengelman.shadow' version '4.0.4'
 	id 'java'
+	id 'com.github.johnrengelman.shadow' version '4.0.4'
     id 'org.spongepowered.plugin' version '0.8.1'
 }
 
@@ -8,12 +8,14 @@ apply plugin: 'java'
 apply plugin: 'idea'
 
 repositories {
+	mavenCentral()
 	maven {url = "https://repo.aikar.co/content/groups/aikar/"}
-	maven { url = "https://hub.spigotmc.org/nexus/content/groups/public/" }
+    jcenter()
+    google()
 }
 
-//archivesBaseName = 'griefalert' // Project Base Name Here
-group = 'com.minecraftonline' // This is a MinecraftOnline project
+archivesBaseName = 'griefalert' // Project Base Name Here
+group = 'com.minecraftonline.sponge' // This is a MinecraftOnline project
 version = '21.0' // Project Version
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
@@ -30,12 +32,20 @@ dependencies {
     compileOnly "org.spongepowered:spongeapi:${sponge_version}"
 }
 
-shadowJar {
-   relocate 'co.aikar.commands', 'com.minecraftonline.griefalert.acf'
-}
-
 sponge.plugin.meta {
     authors = ext.authors
+}
+
+artifacts {
+	archives shadowJar
+}
+
+jar {
+	classifier = "original"
+}
+
+shadowJar {
+	classifier null
 }
 
 jar.manifest {
@@ -43,5 +53,3 @@ jar.manifest {
             "Implementation-Version": version,
             "Implementation-Vendor": "MinecraftOnline"
 }
-
-build.dependsOn shadowJar
