--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'com.github.johnrengelman.shadow' version '4.0.4'
-    id 'org.spongepowered.plugin' version '0.8.1'
+    //id 'com.github.johnrengelman.shadow' version '4.0.4'
+    id 'org.spongepowered.plugin' version '0.9.0'
 }
 
 apply plugin: 'java'
@@ -9,8 +9,10 @@ apply plugin: 'idea'
 
 repositories {
 	mavenCentral()
-    jcenter()
     google()
+    maven { url "http://174.56.59.54:8080/repository/internal" }
+    maven { url "http://maven.sk89q.com/repo/" }
+    jcenter()
 }
 
 archivesBaseName = 'griefalert' // Project Base Name Here
@@ -19,7 +21,7 @@ version = '23' // Project Version
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
-ext.sponge_version = '7.0.0' // SpongeAPI version
+ext.sponge_version = '7.1.0' // SpongeAPI version
 ext.authors = ['PietElite', 'darkdiplomat', 'BastetFurry', '14mRh4X0r'] // Separate with commas (e.g. ['SlowRiot', 'FliPPeh', '14mRh4X0r', 'techkid6'])
 
 compileJava {
@@ -28,23 +30,26 @@ compileJava {
 
 dependencies {
     compileOnly "org.spongepowered:spongeapi:${sponge_version}"
+    compile 'com.doublehelix.utils:NotSoClassicLoader:1.2.2'
+    compile 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
+    compile 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
 }
 
-sponge.plugin.meta {
-    authors = ext.authors
-}
+//sponge.plugin.meta {
+//    authors = ext.authors
+//}
+//
+//artifacts {
+//    archives shadowJar
+//}
+//
+//jar {
+//    classifier = "original"
+//}
 
-artifacts {
-	archives shadowJar
-}
-
-jar {
-	classifier = "original"
-}
-
-shadowJar {
-	classifier null
-}
+//shadowJar {
+//    classifier null
+//}
 
 jar.manifest {
     attributes "Implementation-Title": name,
