--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'idea'
 repositories {
 	mavenCentral()
     google()
-    maven { url "http://174.56.59.54:8080/repository/internal" }
+//    maven { url "http://prism.helion3.com/repo/" }
     maven { url "http://maven.sk89q.com/repo/" }
     jcenter()
 }
@@ -30,7 +30,7 @@ compileJava {
 
 dependencies {
     compileOnly "org.spongepowered:spongeapi:${sponge_version}"
-    compile 'com.doublehelix.utils:NotSoClassicLoader:1.2.2'
+//    compile 'com.helion3.prism:Prism:3'
     compile 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
     compile 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
 }
