--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,10 @@ dependencies {
     compile 'org.spongepowered:spongeapi:7.1.0'
     compile 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
     compile 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
-    shadow fileTree(dir: 'libs', include: '*.jar')
+    compile fileTree(dir: 'libs', include: '*.jar')
+    shadow fileTree(dir: 'libs', include: 'shadow/*.jar')
     compile 'org.xerial:sqlite-jdbc:3.8.11.2'
 }
-
-
 
 sponge.plugin.meta {
     authors = ext.authors
