--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,13 @@ compileJava {
 
 dependencies {
     compile 'org.spongepowered:spongeapi:7.1.0'
-    compile 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
-    compile 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
+    //compile 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
+    //compile 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
     compile fileTree(dir: 'libs', include: '*.jar')
     shadow fileTree(dir: 'libs', include: 'shadow/*.jar')
     compile 'org.xerial:sqlite-jdbc:3.8.11.2'
+    testImplementation('junit:junit:4.13')
+
 }
 
 sponge.plugin.meta {
