--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,25 @@ plugins {
 	id 'java'
     id 'org.spongepowered.plugin' version '0.9.0'
     id 'com.github.johnrengelman.shadow' version '4.0.4'
+    id 'maven-publish'
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/pietelite/griefalert")
+            credentials {
+                username = project.findProperty("gpr.user")
+                password = project.findProperty("gpr.key")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
 
 repositories {
@@ -16,7 +35,7 @@ repositories {
 
 archivesBaseName = 'griefalert' // Project Base Name Here
 group = 'com.minecraftonline.sponge' // This is a MinecraftOnline project
-version = '1.0.1' // Project Version
+version = '1.0.2' // Project Version
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
@@ -42,9 +61,9 @@ sponge.plugin.meta {
     authors = ext.authors
 }
 
-jar {
-    classifier = "original"
-}
+//jar {
+//    classifier = "original"
+//}
 
 shadowJar {
     configurations = [project.configurations.shadow]
