--- a/build.gradle
+++ b/build.gradle
@@ -47,14 +47,15 @@ compileJava {
 }
 
 dependencies {
-    compile 'org.spongepowered:spongeapi:7.1.0'
-    compile 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
-    compile 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
-    compile fileTree(dir: 'libs', include: '*.jar')
+    implementation 'org.spongepowered:spongeapi:7.1.0'
+    implementation 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
+    implementation 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
+    implementation fileTree(dir: 'libs', include: '*.jar')
     shadow fileTree(dir: 'libs', include: 'shadow/*.jar')
-    compile 'org.xerial:sqlite-jdbc:3.8.11.2'
+    implementation 'org.xerial:sqlite-jdbc:3.8.11.2'
+    implementation 'mysql:mysql-connector-java:8.0.19'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.4'
     testImplementation('junit:junit:4.13')
-
 }
 
 sponge.plugin.meta {
