--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ repositories {
 
 archivesBaseName = 'griefalert' // Project Base Name Here
 group = 'com.minecraftonline.sponge' // This is a MinecraftOnline project
-version = '1.2.5' // Project Version
+version = '1.2.6' // Project Version
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
@@ -65,7 +65,7 @@ sponge.plugin.meta {
 }
 
 jar {
-    classifier = "git describe --always".execute().text.trim()
+//    classifier = "git describe --always".execute().text.trim()
 }
 
 shadowJar {
