--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.8.11.2'
     implementation 'mysql:mysql-connector-java:8.0.19'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.4'
+    implementation 'com.zaxxer:HikariCP:3.4.5'
 
     // JUnit
     testImplementation('junit:junit:4.13')
