--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ publishing {
 repositories {
 	mavenCentral()
     google()
-    maven { url "http://maven.sk89q.com/repo/" }
+    maven { url "https://maven.enginehub.org/repo/" }
     maven { url "https://jitpack.io" }
     jcenter()
     flatDir {
@@ -36,7 +36,7 @@ repositories {
 
 archivesBaseName = 'griefalert' // Project Base Name Here
 group = 'com.minecraftonline.sponge' // This is a MinecraftOnline project
-version = '1.4.0' // Project Version
+version = '1.4.1' // Project Version
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
